[package]
name = "nextnext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["jpeg"] }
bevy_egui = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "render",
] }
bevy_eventwork = { path = "../bevy_eventwork", default-features = false }
bevy_eventwork_mod_websockets = { path = "../bevy_eventwork_mod_websockets" }
bevy_http_client = "0.5.1"
bevy-inspector-egui = "0.23"
smooth-bevy-cameras = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.108" }
url = "2.5.0"
thiserror = "1.0"
chrono-humanize = "0.2.1"
instant = { version = "0.1.2", features = ["wasm-bindgen"] }
hsl = "0.1"
colortemp = "0.1.0"
# For PNG support in egui
# egui_extras = { version = "0.27.2", features = ["image"] }
# image = { version = "0.24", default-features = false, features = ["png"] }
egui_extras = { version = "*", features = ["image"] }
image = { version = "0.24", features = ["png"] }


# For ui-test - could probably work around this like:
# https://stackoverflow.com/questions/35711044/how-can-i-specify-binary-only-dependencies
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# eframe = "0.27.2"

# See: https://github.com/NoahShomette/bevy_eventwork_mod_websockets/blob/main/Cargo.toml
[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = { version = "0.7.4" }
async_io_stream = { version = "0.3.3" }

# Enable max optimizations for dependencies, but not for our code:
# https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.dev.package."*"]
opt-level = 3

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind"]

# Keep in sync with:
# https://docs.rs/crate/bevy_http_client/0.5.1/source/Cargo.toml
[dependencies.ehttp]
features = ["native-async", "json"]
version = "0.5.0"

[[bin]]
target_arch = "x86_64-unknown-linux"
name = "ui-test"
src = "ui-test.rs"
path = "src/ui-test.rs"
